--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "ui-router": "0.0.1"
+    "ui-router": "^0.2.15"
   }
 }
