--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "karma": "^0.13.9",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18",
-    "ui-router": "^0.2.15"
+    "phantomjs": "^1.9.18"
   }
 }
